@@ -75,6 +75,9 @@
   and when ``package_dir`` is used, so ``pip freeze`` works in more
   cases (:pull:`3258`)
 
+* Correctly freeze Git develop packages in presence of the &subdirectory
+  option (:pull:`3258`)
+
 
 **7.1.2 (2015-08-22)**
 
